# wb_mpc_centauro

./: .gitattributes  .gitignore  LICENSE.txt  README.md  xbot_instructions.txt
gazebo_ocs2_ros_interfaces/: CMakeLists.txt  package.xml
gazebo_ocs2_ros_interfaces/config/: centauro_dagana_mpc.yaml  centauro_mpc.yaml
gazebo_ocs2_ros_interfaces/launch/: performance_indices.launch  record_mpc.launch
gazebo_ocs2_ros_interfaces/multiplot/: arm1_position.xml  arm1_velocity.xml
gazebo_ocs2_ros_interfaces/pj/: feet_forces.xml  leg_joint_pos.xml  leg_joint_velocities.xml
gazebo_ocs2_ros_interfaces/src/: lintTarget.cpp
gazebo_ocs2_ros_interfaces/src/command/: TargetTrajectoriesInteractiveMarker.cpp  TargetTrajectoriesKeyboardPublisher.cpp  TargetTrajectoriesRosPublisher.cpp
gazebo_ocs2_ros_interfaces/src/common/: Kinematics.cpp  RosMsgConversions.cpp  RosMsgHelpers.cpp
gazebo_ocs2_ros_interfaces/src/mpc/: MPC_ROS_Interface.cpp
gazebo_ocs2_ros_interfaces/src/mrt/: LoopshapingDummyObserver.cpp  MRT_ROS_Dummy_Loop.cpp  MRT_ROS_Interface.cpp
gazebo_ocs2_ros_interfaces/src/synchronized_module/: RosReferenceManager.cpp
gazebo_ocs2_ros_interfaces/src/visualization/: VisualizationColors.cpp  VisualizationHelpers.cpp
gazebo_ocs2_ros_interfaces/src/xbot2/: AdmittanceReferenceGenerator.cpp  ForceControl.cpp  XbotInterface.cpp
ocs2_centauro/: CMakeLists.txt  COMPUTATION_BENCHMARK.md  package.xml
ocs2_centauro/config/command/: centauro_reference.info  gait.info  joint_limits.info
ocs2_centauro/config/control/: impedance_gains_control.yaml  impedance_gains_simulation.info
ocs2_centauro/config/mpc/: centauro_locomotion.info  centauro_task.info  centauro_task_soft.info  centauro_task_soft_old.info
ocs2_centauro/include/ocs2_centauro/: LeggedRobotInterface.h  LeggedRobotPreComputation.h
ocs2_centauro/src/: LeggedRobotInterface.cpp  LeggedRobotPreComputation.cpp
ocs2_centauro/src/common/: ModelSettings.cpp
ocs2_centauro/src/constraint/: CoordinateVelocityConstraintCppAd.cpp  EndEffectorConstraint.cpp  EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  UnilateralConstraint.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
ocs2_centauro/src/cost/: LeggedRobotStateInputQuadraticCost.cpp
ocs2_centauro/src/dynamics/: LeggedRobotDynamicsAD.cpp
ocs2_centauro/src/foot_planner/: ArmSwingTrajectoryPlanner.cpp  CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
ocs2_centauro/src/gait/: Gait.cpp  GaitSchedule.cpp  ModeSequenceTemplate.cpp
ocs2_centauro/src/initialization/: LeggedRobotInitializer.cpp
ocs2_centauro/src/interaction/: AdmittanceReferenceGenerator.cpp  ForceControl.cpp
ocs2_centauro/src/reference_manager/: SwitchedModelReferenceManager.cpp
ocs2_centauro/test/: CentauroFactoryFunctions.cpp  CentauroUrdf.h  testCentauroEndEffectorKinematics2.cpp
ocs2_centauro/test/constraint/: testEndEffectorLinearConstraint.cpp  testFrictionConeConstraint.cpp  testZeroForceConstraint.cpp
ocs2_centauro_ros/: .gitignore  CMakeLists.txt  package.xml
ocs2_centauro_ros/launch/: centauro_ddp.launch
ocs2_centauro_ros/rviz/: legged_robot.rviz
ocs2_centauro_ros/src/: CentauroDdpMpcNode.cpp  LeggedRobotArmTarget.cpp  LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
ocs2_centauro_ros/src/gait/: GaitAndTargetTrajectoriesInteractiveMarker.cpp  GaitKeyboardPublisher.cpp  GaitReceiver.cpp
ocs2_centauro_ros/src/sensing/: EstimatedWrenchReceiver.cpp  JointStatesReceiver.cpp
(+340 files in other folders)
